# GitHub-Engineering-Worker

./: .gitignore  AGENTS.md  CLAW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STATES.md  WORKFLOW.md  pyproject.toml
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md
.github/workflows/: README.md  main.yml
.openclaw/: README.md  project.yaml  runtime.md
agents/: README.md  __init__.py
assets/: architecture.txt
audit/: README.md  __init__.py  logger.py  models.py
browser/: __init__.py
confidence/: __init__.py  engine.py  models.py
configuration/: README.md  __init__.py  settings.yaml
contracts/: __init__.py
demo/: README.md  failure-flow.txt  success-flow.txt
discord/: __init__.py  ai_worker.py  bot.py  models.py  online.py  setup.py  webhook.py
docs/: README.md  agents.md  architecture.md  getting-started.md  tools.md  workflows.md
engineering/: __init__.py  issue_understanding.py  openclaw_agent.py  pipeline.py
escalation/: __init__.py  engine.py  models.py
examples/: commands.md  discord-notification.json  engineering-report.json  escalation-output.txt  retry-output.txt  successful-issue-output.txt
github/: __init__.py  configuration.py  exceptions.py  models.py
interfaces/: __init__.py
logs/: README.md
memory/: MEMORY.md  README.md
models/: __init__.py
notifications/: __init__.py  models.py  service.py
policies/: README.md
reports/: __init__.py  generator.py  models.py
retry/: FAILURE_POLICY.md  README.md  RETRY_POLICY.md
review/: README.md
runtime/: README.md  __init__.py  logging.py
sample-config/: config.example.yaml  discord.example.yaml  github.example.yaml  provider.example.yaml
scripts/: demo_worker.py  install_discord_bot_startup_task.ps1  run_discord_bot_forever.ps1  start_discord_bot.ps1
states/: README.md
tests/: test_discord_worker_capabilities.py  test_engineering_reasoning_pipeline.py  test_openclaw_model_selection.py  test_verification_loop.py  test_worker_daemon_queue_lifecycle.py  test_worker_runtime_interface.py
tools/: README.md  __init__.py  context.py  metadata.py
utilities/: README.md
worker/: __init__.py  cli.py  controller.py  git_workflow.py  models.py  runtime_interface.py
workflows/: README.md
(+284 files in other folders)
