[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-engineering-worker"
version = "0.1.0"
description = "Runtime core for the GitHub Engineering Worker autonomous engineering platform."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "GitHub Engineering Worker Contributors" }]

[project.scripts]
worker = "worker.cli:main"

[tool.setuptools.packages.find]
include = [
    "runtime*",
    "agents*",
    "tools*",
    "github*",
    "engineering*",
    "worker*",
    "confidence*",
    "audit*",
    "escalation*",
    "notifications*",
    "discord*",
    "reports*",
]
