[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-engineering-worker"
version = "0.1.0"
description = "Runtime core for the GitHub Engineering Worker autonomous engineering platform."
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "GitHub Engineering Worker Contributors" }]
dependencies = [
    "playwright>=1.45.0",
    "python-dotenv>=1.0.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
worker = "worker.cli:main"
worker-discord = "discord.setup:main"
worker-discord-online = "discord.online:main"

[tool.setuptools.packages.find]
include = [
    "runtime*",
    "agents*",
    "tools*",
    "browser*",
    "planner*",
    "reasoning*",
    "decision*",
    "execution*",
    "goal*",
    "observer*",
    "reflection*",
    "github*",
    "engineering*",
    "worker*",
    "confidence*",
    "audit*",
    "escalation*",
    "notifications*",
    "discord*",
    "reports*",
]
